--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
     <!DOCTYPE html>
     <html>
     <head>
-        <title>WhatsApp Message Sender</title>
+        <title>WhatsApp Message Sender Page</title>
     </head>
     <body>
         <h1>Send WhatsApp Message</h1>
